# yolo-labeling-tool

./: BalanceObjectsDialog.cpp  BalanceObjectsDialog.h  BalanceObjectsDialog.ui  BoundingBoxSelector.cpp  BoundingBoxSelector.h  CMakeLists.txt  DatasetProject.cpp  DatasetProject.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Utils.cpp  Utils.h  ValidationClassBoxes.cpp  ValidationClassBoxes.h  ValidationClassBoxes.ui  ValidationClassBoxesListModel.cpp  ValidationClassBoxesListModel.h  YoloLabel.pro  datasetproject.cpp  datasetproject.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  validationclassboxes.cpp  validationclassboxes.h  validationclassboxes.ui
annotations_convertor/: AnnotationsConverter.cpp  AnnotationsConverter.hpp  CMakeLists.txt  main.cpp
scripts/: CMakeLists.txt  ClassesDistributionChart.ods  copy_files_from_list_to_folder.sh  create_data_file.cmake  create_yolo_cfg_file.cmake  downscale_images.sh  prepeare_dataset_for_train.sh  renumerate.sh  run_darknet.sh  run_darknet_full.sh
suffle_and_split/: CMakeLists.txt  main.cpp  yolov3-tiny-train_.txt  yolov3-tiny-train_.txt.NormalizedHistogram  yolov3-tiny-train_.txt.histogram  yolov3-tiny-valid_.txt  yolov3-tiny-valid_.txt.NormalizedHistogram  yolov3-tiny-valid_.txt.histogram
wider_person_dataset_convertor_to_darknet/: CMakeLists.txt  wider_person_dataset_convertor_to_darknet.cpp
